add update and delete category endpoints
